@@ -1,6 +1,7 @@
+dhcpcd-3.0.7
 Allow Linux to use Token Ring again as Linux does not have any more hardware
 specific code. BPF needs a patch for Token Ring support.
-Dawin is now reported to work.
+Dawin is now reported to work. NetBSD and OpenBSD should work also.
 cleanmetas now inserts a \ when it finds a ' so we get the proper
 values in our .info files when read by a shell.
 Add new CFLAGS to ensure that the code quality is good.
